--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-</head>
-<body>
-    <div id="root"></div> 
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <title>Home Page</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <script
+            defer
+            src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
+        ></script>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
